# pyscope

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  README.rst  SECURITY.md  TODO.md  TODO.txt  asidemo.py  codecov.yml  coverage.xml  pyproject.toml  requirements.txt  setup.cfg  setup.py  vb.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codecov.yml  conda-publish.yml  formatting.yml  pypi-publish.yml
_archive/: logutil.py  weather_thread.py
_archive/reduction/: ccdcalib  email-summary  fitsfilter  fitslist  remove-hot-pixels
_archive/scheduling/: mk-mosaic-schedule  rst
_tba/: codecov.yml  distemail  exoplanet_fitter  rockfinder
_tba/analysis/: BV2gr.py  exoplanet_fitter  field-photom  find-asteroid  find-rocks.py  find-transients.py  plot-photom.py  plt-phot  rockfinder  rocklister.py  sexphot.py  sexphot2.py
_tba/observatory/: calibration_config.txt  calibration_images.py  fiber_search.ipynb  measure_filter_focus_offsets.py  slew_grid.py
_tba/pwi4/: README.txt  close_shutter.bat  open_shutter.bat  platesolve.py  pwi4_build_model.py  pwi4_client.py  pwi4_client_demo.py  pwi4_startup.py  shutter_status.bat
_tba/reduction/: align_images.py  cmos-calib.py  compare_fits_headers.py  crop-image  file_renumber.py  mvToDate  rename_fts  retrieve_images  sort-files
_tba/telrun/: distemail  exoplanet_transits.py  get-asassn  mk_mosaic_schedule.py  notification.py  obs-plan  offsetCalc.py  rebootnotify.py  summary_report.py
analysis/photometry/: calc-zmag  find-rocks
analysis/spectroscopy/: grism_analysis-new.ipynb
conda/: meta.yaml
config/: focus_offsets.cfg  focus_offsets.cfg.16Jan2017  focus_offsets_20160211.cfg  iota_gemini.ppk  observatory.cfg  pyscope_chronos.ppk  pyscope_chronos_pub  telrun.cfg  telrun.cfg.16jan2017  telrun.cfg.25mar2016  telrun.cfg.backup  wcs.cfg.16Jan2017
config/kmi-w8pc/: notification.cfg  telrun.cfg  wcs.cfg
docs/source/: about.rst  api.rst  cite.rst  conf.py  development.rst  headerCSVGenerator.py  help.rst  how-to.rst  index.rst  installation.rst  license.rst  pyscope.analysis.rst  pyscope.observatory.rst  pyscope.reduction.rst  pyscope.telrun.rst  pyscope.utils.rst  report.rst  setup-reference.rst  user_guide.rst
examples/: ImageLoop.ipynb  calibrate_target_pixel.py  measure_filter_focus_offsets.py
iotalib/: check_roof.py  config_telrun.py  observatory.py  telrun_main.py  telrun_main.py.backup.py  telrun_main.py_backup_Nov30  telrun_main.pyc_30Nov2016  telrun_main_backup_2_24_2017.py  telrun_main_backup_5_11_2020.py  weather.py  x.x
iotalib/AvantesController/: as5216.py
my_test/config/: observatory.cfg
my_test/images/: aaa__12h51m28-45s_+42d22m53-410s_2024-04-04T05-09-50_0  aaa__12h51m28-45s_+42d22m53-410s_2024-04-04T05-09-50_1  aaa__12h51m28-78s_+42d22m53-410s_2024-04-04T05-11-45_0  aaa__12h51m28-78s_+42d22m53-410s_2024-04-04T05-11-45_1
my_test/logs/: telrun_status.json
my_test/schedules/: schedule.cat  test_schedtel_2.sch
operations/: .gitignore  README.md  TODO.md
operations/config/: notification.cfg  observatory.cfg  telrun.cfg  wcs.cfg
operations/docs/: FITS_Header_Comparison.txt  IOTA Documentation.docx  TA Documentation.docx  efaanddeltatdocumentation.txt
operations/drivers/: autofocus_simulator.py
operations/iotalib/: JPL_horizons_function.py  VAOSpec.py  _debug_edb.py  airmass.py  astropy_wcs.py  center_target.py  center_target_pinpoint.py  comhelper.py  config.py  config_focus_offsets.py  config_notification.py  config_observatory.py  config_telrun.py  config_wcs.py  consoleutil.py  convert.py  email_warnings_thread.py  gmail.py  id_dsa.talon@deimos  jpl_test_file.py  notification.py  observatory.py  paths.py  platesolve2.py  ssh.py  talonwcs.py  tcc reboot email notification.py  tcc_reboot_notification.bat  telrun_gui.py  telrun_main.py  telrun_status.py  telrunfile.py  test_edb.py  testrunner.py
operations/putty/: README.txt
operations/sample_sch_files/: mai114.sch  mai115.sch  mak114.sch  mdb114.sch  mfd114.sch  mfj114.sch  xea114.sch
operations/schedules/: README.txt
putty/: README.txt
pyscope/: __init__.py  _driver_utils.py  autofocus.py  camera.py  cover_calibrator.py  db.py  dome.py  filter_wheel.py  focuser.py  observatory.py  observing_conditions.py  rotator.py  safety_monitor.py  switch.py  telescope.py  utils.py  wcs.py
pyscope/_scripts/: cron_calib-dist-email
pyscope/_utils/: center_target.py  rst.py
pyscope/analysis/: __init__.py  calc_zmag.py  detect_sources_photutils.py
pyscope/config/: observatory.cfg  telrun.cfg
pyscope/drivers/: __init__.py  abstract_hardware.py  abstract_software.py  ascom.py  astrometry_net_wcs.py  autofocus_pwi.py  html_observing_conditions.py  html_safety_monitor.py  ip_cover_calibrator.py  maxim.py  observing_conditions_html.py  observing_conditions_winer.py  pinpoint_wcs.py  pwi_autofocus.py  safety_monitor_html.py  safety_monitor_winerroof.py  wcs_astrometrynet.py  wcs_pinpoint.py
pyscope/grism/: __init__.py  big_calib.py  grism_analysis.ipynb  grism_calib.ipynb  grism_calib.py  grism_utils.py
pyscope/gui/: themeSetup.tcl
pyscope/observatory/: __init__.py  _docstring_inheritee.py  _pwi4.py  ascom_camera.py  ascom_cover_calibrator.py  ascom_device.py  ascom_dome.py  ascom_driver.py  ascom_filter_wheel.py  ascom_focuser.py  ascom_observing_conditions.py  ascom_rotator.py  ascom_safety_monitor.py  ascom_switch.py  ascom_telescope.py  (+34 more)
reduction/: calib-images  cmos-calib  cmos_calib  dist-images  email-summary  wcs
sample_sch_files/: 2_42721_augustinus_4-24-2015.sch  2_42798_DaveDowhos_4-24-2015.sch  2_42809_glbates_4-24-2015.sch  2_42810_glbates_4-24-2015.sch  2_42811_glbates_4-24-2015.sch  2_42814_DaveDowhos_4-24-2015.sch  frm000.sch  gad97.sch  mec114.sch  telrun.sls
schedules/: telrun - Copy.sls  telrun.sls  telrun.sls.repeatfilenames
scheduling/: calc-star-coords  schedtel
tests/: test_camera.py  test_recentering.py
utilities/: ImageLoop.ipynb  push-chronos
(+965 files in other folders)
