[metadata]
name = pyscope
version = 0.1.0
author = Walter Golay
author_email = wgolay30@gmail.com
url = https://github.com/WWGolay/pyScope
description = A python package for controlling small optical telescopes
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, telescope, astrophotography, astrometry, photometry, python, automation, ascom, astropy, observatory, observatory automation
license = AGPLv3
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    Intended Audience :: Education
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Education
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
python_requires = >=3.10
zip_safe = False
include_package_data = True
install_requires = file: requirements.txt

[options.entry_points]
console_scripts = 
    init-telrun-dir = pyscope.telrun:init_telrun_dir_cli,
    init-remote-dir = pyscope.telrun:init_remote_dir_cli,
    schedtel = pyscope.telrun:schedtel_cli,
    plot-schedule-gantt = pyscope.telrun:plot_schedule_gantt_cli,
    start-telrun = pyscope.telrun:start_telrun_cli,
    start-syncfiles = pyscope.telrun:start_syncfiles_cli,
    syncfiles = pyscope.telrun:syncfiles_cli,
    calc-zmag = pyscope.analysis.calc_zmag_cli,
    collect-calibration-set = pyscope.observatory.collect_calibration_set_cli,
    avg-fits = pyscope.reduction.avg_fits_cli,
    calib-images = pyscope.reduction.calib_images_cli,
    ccd-calib = pyscope.reduction.ccd_calib_cli,
    fitslist = pyscope.reduction.fitslist_cli

[options.extras_require]
# dev = 

[options.package_data]
pyscope = *.txt