[metadata]
name = pyscope
version = attr: pyscope.__version__
author = Walter Golay
author_email = wgolay30@gmail.com
url = https://github.com/WWGolay/pyscope
description = A python package for controlling small optical telescopes
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, telescope, astrophotography, astrometry, photometry, python, automation, ascom, astropy, observatory, observatory automation
license = AGPLv3
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    Intended Audience :: Education
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Education
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
python_requires = >=3.10
zip_safe = False
include_package_data = True
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    init-telrun-dir = pyscope.telrun.init_dirs:init_telrun_dir_cli
    init-remote-dir = pyscope.telrun.init_dirs:init_remote_dir_cli
    schedtel = pyscope.telrun.schedtel:schedtel_cli
    plot-schedule-gantt = pyscope.telrun.schedtel:plot_schedule_gantt_cli
    start-telrun = pyscope.telrun.startup:start_telrun_cli
    start-syncfiles = pyscope.telrun.startup:start_syncfiles_cli
    syncfiles = pyscope.telrun.syncfiles:syncfiles_cli
    calc-zmag = pyscope.analysis.calc_zmag:calc_zmag_cli
    collect-calibration-set = pyscope.observatory.collect_calibration_set:collect_calibration_set_cli
    avg-fits = pyscope.reduction.avg_fits:avg_fits_cli
    calib-images = pyscope.reduction.calib_images:calib_images_cli
    ccd-calib = pyscope.reduction.ccd_calib:ccd_calib_cli
    fitslist = pyscope.reduction.fitslist:fitslist_cli
    exoplanet-transits = pyscope.telrun.exoplanet_transits:exoplanet_transits_cli
    mk-mosaic-schedule = pyscope.telrun.mk_mosaic_schedule:mk_mosaic_schedule_cli
    rst = pyscope.telrun.rst:rst_cli
    summary-report = pyscope.telrun.summary_report:summary_report_cli

[options.extras_require]
docs =
    sphinx>=4.5.0
    sphinx-astropy[confv2]>=1.9.1
    sphinx-favicon>=1.0.1
    sphinxcontrib-programoutput>=0.17

dev =
    black>=23.7.0
    docutils>=0.20.1
    esbonio>=0.16.1
    isort>=5.12.0
    pre-commit>=3.3.3
    pytest>=7.4.0
    rstcheck>=6.1.2
    sphinx>=4.5.0
    sphinx-astropy[confv2]>=1.9.1
    sphinx-favicon>=1.0.1
    sphinxcontrib-programoutput>=0.17

[options.package_data]
pyscope = *.txt
