[metadata]
name = pyscope
version = attr: pyscope.__version__
author = Walter Golay
author_email = wgolay@cfa.harvard.edu
project_urls =
    Source = https://github.com/macro-consortium/pyscope
    Documentation = https://pyscope.readthedocs.io/en/latest/
description = A python package for controlling small optical telescopes
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = astronomy, astrophysics, telescope, astrophotography, astrometry, photometry, python, automation, ascom, astropy, observatory, observatory automation
license = AGPLv3
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    Intended Audience :: Education
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: OS Independent
    Programming Language :: Python :: 3.12
    Topic :: Education
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
python_requires = >=3.12
zip_safe = False
include_package_data = True
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    init-queue = pyscope.telrun.init_queue:init_queue_cli
    init-telrun-dir = pyscope.telrun.init_dirs:init_telrun_dir_cli
    exoplanet-transits = pyscope.telrun.exoplanet_transits:exoplanet_transits_cli
    mk-mosaic-schedule = pyscope.telrun.mk_mosaic_schedule:mk_mosaic_schedule_cli
    rst = pyscope.telrun.rst:rst_cli
    survey-builder = pyscope.telrun.survey_builder:survey_builder_cli
    schedule-report = pyscope.telrun.reports:schedule_report_cli
    summary-report = pyscope.telrun.reports:summary_report_cli
    schedtel = pyscope.telrun.schedtel:schedtel_cli
    plot-schedule-gantt = pyscope.telrun.schedtel:plot_schedule_gantt_cli
    start-telrun-operator = pyscope.telrun.startup:start_telrun_operator_cli
    fitslist = pyscope.reduction.fitslist:fitslist_cli
    collect-calibration-set = pyscope.observatory.collect_calibration_set:collect_calibration_set_cli
    reduce-calibration-set = pyscope.reduction.reduce_calibration_set:reduce_calibration_set_cli
    avg-fits = pyscope.reduction.avg_fits:avg_fits_cli
    ccd-calib = pyscope.reduction.ccd_calib:ccd_calib_cli
    calib-images = pyscope.reduction.calib_images:calib_images_cli
    astrometry-net-wcs = pyscope.reduction.astrometry_net_wcs:astrometry_net_wcs_cli
    maxim-pinpoint-wcs = pyscope.reduction.maxim_pinpoint_wcs:maxim_pinpoint_wcs_cli
    pinpoint-wcs = pyscope.reduction.pinpoint_wcs:pinpoint_wcs_cli
    twirl-wcs = pyscope.reduction.twirl_wcs:twirl_wcs_cli
    detect-sources-photutils = pyscope.analysis.detect_sources_photutils:detect_sources_photutils_cli
    calc-zmag = pyscope.analysis.calc_zmag:calc_zmag_cli

[options.extras_require]
docs =
    astroplan==0.9
    sphinx==8.0.2
    sphinx-astropy[confv2]==1.9.1
    sphinx-favicon==1.0.1

tests =
    pytest==8.1.1
    pytest-cov==5.0.0
    pytest-doctestplus==1.2.1

dev =
    docutils==0.21.2
    black==24.8.0
    esbonio==0.16.5
    isort==5.13.2
    pre-commit==3.8.0
    pytest==8.1.1
    pytest-cov==5.0.0
    sphinx==8.0.2
    pytest-order==1.3.0
    sphinx==8.0.2
    sphinx-astropy[confv2]==1.9.1
    sphinx-favicon==1.0.1
    sphinxcontrib-programoutput==0.17
    twine==5.1.1
